<?xml version="1.0"?>
<package format="2">
  <name>livox_to_pointcloud2</name>
  <version>0.0.0</version>
  <description>The livox_to_pointcloud2 package</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver</depend>

  <export>
  </export>
</package>
